fixed variant edit buttons on small viewports

--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -683,12 +683,16 @@ div:nth-of-type(1) > .list > .roomState .star {
   #variantsList img {
     float: left;
   }
-  #variantsList .variant > div, #variantsList .play {
+  .variant > div, #variantsList .play {
     display: inline-flex;
   }
-  #variantsList .variant > .variant-name {
+  .variant > .variant-name {
     display: block;
     min-height: 40px;
+  }
+  .variant > .variantEdit {
+    flex-direction: column;
+    align-items: flex-start;
   }
   #helpTexts {
     padding: 0 10px;
